pkl/tests/invalid/duplicateTaskID.pkl
amends "../../domain/WorkDomain.pkl"

projects {
  new Project {
    id = "project.demo"
    name = "Demo"
    kind = "toolchain"
  }
}

actors {
  new Actor {
    id = "actor.dagger"
    kind = "dagger-function"
    description = "Executor"
    allowedCapabilities {
      "cap.run"
    }
  }
}

capabilities {
  new Capability {
    id = "cap.run"
    kind = "dagger-service"
    tool = "dagger"
  }
}

scopes {
  new Scope {
    id = "scope.local"
    description = "Local"
  }
}

plans {
  new WorkPlan {
    id = "plan.demo"
    project = "project.demo"
    scope = "scope.local"
    tasks {
      new Task {
        id = "task.same"
        taskwarriorUuid = "11111111-1111-4111-8111-111111111111"
        description = "first"
        project = "project.demo"
        actor = "actor.dagger"
        capability = "cap.run"
      }
      new Task {
        id = "task.same"
        taskwarriorUuid = "22222222-2222-4222-8222-222222222222"
        description = "second"
        project = "project.demo"
        actor = "actor.dagger"
        capability = "cap.run"
      }
    }
  }
}
